# Flux-Black

./: .env  .gitignore  README.md  app.py  config.json  pyproject.toml
blueprints/: __init__.py  root.py
helpers/: __init__.py  config_loader.py  constants.py  current_year.py  factory.py  link_item.py
sass/: _fonts.scss  _mixins.scss  _reset.scss  _variables.scss  main.scss
static/css/: main.css  main.css.map
static/js/: ShortcutNavigator.js  main.js
templates/pages/: admin.html  blog.html  index.html  landing.html  projects.html  socials.html
templates/partials/: link-list.html
templates/shared/: base.html  master.html
